[tool.poetry]
name = "jcascutil"
version = "1.0.0"
description = "A tool to aid in working with configuration as code (CasC) files for Jenkins"
authors = ["Conner Crosby <conner@cavcrosby.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pylib-cavcrosby = {git = "https://github.com/cavcrosby/pylib.git", branch = "main"}
"ruamel.yaml" = "^0.17.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
